--- a/app/templates/movie.html
+++ b/app/templates/movie.html
@@ -1,1 +1,11 @@
-<h1>Open movie {{id}} </h1>
+<!DOCTYPE html>
+<html>
+    <head>
+        {%if title%}
+        <title>{{title}}</title>
+        {%else%}
+        <title>Movie</title>
+        {%endif%}
+    </head>
+    <body></body>
+</html><h1>Open movie {{id}} </h1>
