--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         {% if title %}
         <title>{{title}}</title>
-        {% elseif %}
+        {% else %}
         <title>Welcome to the Best Movie Review Site</title>
         {% endif %}
     </head>
