--- a/app/templates/movie.html
+++ b/app/templates/movie.html
@@ -1,3 +1,4 @@
+{% extends 'base.html' %}
 <!DOCTYPE html>
 <html>
     <head>
@@ -7,5 +8,9 @@
         <title>Movie</title>
         {%endif%}
     </head>
-    <body></body>
+    <body>
+        {% block content %}
+
+        {%endblock%}
+    </body>
 </html>
