--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,4 +1,5 @@
 <!-- basefile with basic html structure -->
+{% extends 'bootstrap/base.html' %}
 <!DOCTYPE html>
 <html>
     <head>
@@ -10,6 +11,10 @@
         {% endif %}
     </head>
     <body>
+        <!-- navbar block -->
+        {% block navbar%}
+            {% include 'nanvbar.html' %}
+        {% endblock %}
         <!-- content blck which defines elements which can be chnaged in the derived template -->
         {% block content%}
 
