--- a/app/templates/movie.html
+++ b/app/templates/movie.html
@@ -1,16 +1,21 @@
 {% extends 'base.html' %}
-<!DOCTYPE html>
-<html>
-    <head>
-        {%if title%}
-        <title>{{title}}</title>
-        {%else%}
-        <title>Movie</title>
-        {%endif%}
-    </head>
-    <body>
-        {% block content %}
+<!-- content block -->
+{% block content%}
+<div class="container">
+    <!-- poster background -->
+    <div class="row">
+        
+        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 postePath" style="background: url({{movie.poster}}) no-repeat center center">
+        </div>
 
-        {%endblock%}
-    </body>
-</html>
+        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 movie-details">
+            <h3>{{movie.title}}</h3>
+
+            <p class="overview">{{movie.overview}}</p>
+            <p class="ratings"><b>{{movie.vote_average}}</b> - <i>{{movie.vote_count}} votes</i></p>
+        </div>
+
+    </div>
+</div>
+
+{% endblock%}
