--- a/app/templates/movie.html
+++ b/app/templates/movie.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% import 'macros.html' as macro %}
 <!-- content block -->
 {% block content%}
 <div class="container">
@@ -16,6 +17,20 @@
             <a class="ratings" href="/movie/review/new/{{movie.id}}"> Write a new review </a>
         </div>
 
+    </div>
+
+    <!-- reviews section -->
+    <div class="row">
+
+        <h1>Reviews</h1>
+        <hr>
+
+        {% if reviews %}
+            {{macro.displayReviews(reviews)}}
+        {% else %}
+            <h3 class="text-center"> This movie has no reviews</h3>
+            <a class="btn btn-success btn-lg text-center" href="/movie/review.new.{{movie.id}}"> Write a Review</a>
+        {% endif %}
     </div>
 </div>
 
