--- a/app/templates/movie.html
+++ b/app/templates/movie.html
@@ -29,7 +29,7 @@
             {{macro.displayReviews(reviews)}}
         {% else %}
             <h3 class="text-center"> This movie has no reviews</h3>
-            <a class="btn btn-success btn-lg text-center" href="/movie/review.new.{{movie.id}}"> Write a Review</a>
+            <a class="btn btn-success btn-lg text-center" href="/movie/review/new/{{movie.id}}"> Write a Review</a>
         {% endif %}
     </div>
 </div>
